package proto;

message peer_data {
  required string ip = 1;
  required int32 port = 2;
  required int32 age = 3;
  required int64 id = 4;
  required int32 nr_slices = 5;
  required double pos = 6;
  required int32 slice = 7;
}

message pss_message {
  enum Type {
    NORMAL = 0;
    RESPONSE = 1;
    LOCAL = 2;
    LOADBALANCE = 3;
  }

  required Type type = 1;
  required string sender_ip = 2;
  required int32 sender_port = 3;
  repeated peer_data view = 4;
}
